fix: cannot insert csv with spaces next to comma into multi-enum field
Refs: #104